<resources>
    <string name="app_name">playlist</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="info">Информация</string>
    <string name="more">Подробнее</string>
    <string name="genres">Жанр:</string>
    <string name="tracks">Количество треков:</string>
    <string name="albums">Количество альбомов:</string>
    <string name="link">Ссылка:</string>
    <string name="search">Поиск</string>
    <string name="about">О программе</string>
    <string name="feedback">Обратная связь</string>
    <string name="no_mail_app_error">Нету почтового клиента</string>
    <string name="notification_content_title">Слушайте любимую музыку</string>
    <string name="notification_content_text">Выберите приложение</string>
    <string name="yandex_music">Яндекс.Музыка</string>
    <string name="yandex_radio">Яндекс.Радио</string>
</resources>
