<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:icon="@drawable/ic_help_white_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_feedback"
        android:title="@string/feedback"
        android:icon="@drawable/ic_email_outline_white_24dp"
        app:showAsAction="ifRoom"/>
</menu>
