<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/item_background"
    card_view:cardElevation="@dimen/singer_info_card_elevation"
    card_view:cardCornerRadius="@dimen/singer_info_card_radius"
    card_view:cardUseCompatPadding="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/singer_info_card_padding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            style="@style/TextLargePrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextMediumPrimary"
            android:id="@+id/name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextMediumPrimary"
                android:text="@string/genres"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextMediumSecondary"
                android:layout_marginLeft="@dimen/singer_info_card_padding_between_texts"
                android:id="@+id/genres" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextMediumPrimary"
                android:text="@string/tracks"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextMediumSecondary"
                android:layout_marginLeft="@dimen/singer_info_card_padding_between_texts"
                android:id="@+id/tracks" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextMediumPrimary"
                android:text="@string/albums"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextMediumSecondary"
                android:layout_marginLeft="@dimen/singer_info_card_padding_between_texts"
                android:id="@+id/albums" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>